# django-form-error-reporting

./: .gitignore  README.rst  form_error_reporting.py  setup.cfg  setup.py
tests/: __init__.py  __main__.py  forms.py  test_form_error_reporting.py  urls.py  utils.py
