[metadata]
name = django-form-error-reporting
version = attr: form_error_reporting.__version__
url = https://github.com/ministryofjustice/django-form-error-reporting
author = Ministry of Justice Digital & Technology
author_email = dev@digital.justice.gov.uk
description = A form mixin that reports form errors as events to Google Analytics
long_description = file: README.rst
license = MIT
keywords =
    django form
    errors
    google analytics
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
; NB: looser python version requirement than what's tested
python_requires = >=3.6
py_modules =
    form_error_reporting
install_requires =
    Django>=2.2,<5.2
    requests

[flake8]
exclude = .git/,.eggs/,.tox/,build/,dist/,env/,venv/
max-complexity = 12
max-line-length = 120

[coverage:run]
omit =
    setup.py
    */tests/*
    .eggs/*
    .tox/*
